--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body{
     height: 95svh;
     margin: 1em;
     font-family: "Press Start 2P", cursive;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 main{
     color: #9d3be1;
@@ -19,6 +19,7 @@ main{
     padding: 1em;
     display: flex;
     flex-direction: column;
+
 }
 
 .highlight{
@@ -28,6 +29,7 @@ main{
 
 .type{
     display: flex;
+    align-items: center;
 }
 
 .type input{
@@ -35,9 +37,10 @@ main{
     width: 100%;
     border: none;
     font-family: "Press Start 2P", cursive;
-    font-size: 0.6rem;
+    margin-left: 0.3rem;
     color: aliceblue;
 }
+
 .type input:focus{
     outline: none;
 }
@@ -46,12 +49,24 @@ main{
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: center;
+    justify-content: left;
+    background-color: rgba(0, 0, 0, 0.842);
+    padding: 2rem;
+    border-radius: 1rem;
+    margin-top: 1rem;
+    height: 100%;
+    width: 90svw;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #9d3be1 transparent;
+    margin: 0 auto;
     
 }
 
 #app p{
     line-height: 2em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 #app .pre_line{
