--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,6 @@ main{
     padding: 1em;
     display: flex;
     flex-direction: column;
-
 }
 
 .highlight{
@@ -32,6 +31,17 @@ main{
     align-items: center;
 }
 
+a{
+    text-decoration: underline;
+    color: inherit;
+}
+
+
+a:hover{
+    color: #ff00ff;
+    cursor: pointer;
+}
+
 .type input{
     background-color: transparent;
     width: 100%;
@@ -39,6 +49,9 @@ main{
     font-family: "Press Start 2P", cursive;
     margin-left: 0.3rem;
     color: aliceblue;
+    font-size: 1rem;
+    caret-color: #9d3be1;
+    caret-shape: block;
 }
 
 .type input:focus{
@@ -67,14 +80,23 @@ main{
     line-height: 2em;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+    text-align: justify;
+    text-align-last: left;
+
 }
 
 #app .pre_line{
-    color: aliceblue;
+    color: #9c3be1;
     
 }
 
 #app .dots{
-    color: #9d3be1;
+    color: #fff;
+}
+
+@media screen and (max-width: 800px){
+    body{
+        font-size: 0.6rem;
+    }
 }
 
